[package]
name = "ephc"
version = "0.1.0"
authors = ["qiang <qiang@pan1c.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
tokio = { version = "1.6", features = ["rt-multi-thread", "process", "io-std", "net", "macros", "time" ] }
tokio-stream = "0.1"